2013-02-07: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm (add_signature): call fetch_public_key() iff
   the signature passes a validity check

2013-02-06: Jason Long <jlong@messiah.edu>
 * t/corpus/good_83176.txt: add new email to test suite; this email contains
   a signature with a LIST of query methods, one of which is good, but the
   rest should be quietly ignored. This test currently fails.
 * lib/Mail/DKIM/Signature.pm (check_protocol): support multiple methods being
   specified in signatures q= tag. We look for dns/txt to occur anywhere in
   the field; all other values are ignored.

 -- VERSION 0.40 --

2013-02-06: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm: revert change that enabled EDNS0 by default;
   provide enable_EDNS0() subroutine for enabling EDNS0
 * scripts/dkimverify.pl: sample verification script updated to enable
   EDNS0 before performing the verification

2013-02-06: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm: set udppacketsize to 1240, which is small enough
   that packet fragmentation will not normally occur; use DNS txtdata()
   method on versions of Net::DNS that support it. (This patch contributed
   by Mark Martinec.)

2013-02-04: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm: set default udppacketsize to 2048, which seems
   to be the suggested value to use in the Net::DNS documentation.

2013-02-04: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm: avoid an 'uninitialized value' warning when
   signature being verified is missing a d= tag; accept a selector name
   of '0' rather than treating it as if the s= tag was missing
 * lib/Mail/DKIM/PublicKey.pm: sanity check selector/domain before
   attempting a DNS query (this fixes another 'uninitialized value' warning)
 * lib/Mail/DKIM/Signature.pm: avoid an 'uninitialized value' warning when
   calling identity() and d= tag is missing

2013-02-04: Jason Long <jlong@messiah.edu>